data/derived/comb/progs/unify/prog8772.ml.out
Characters 14-16:
  let _ = build(10, 0);;
                ^^
Error: This expression has type int but an expression was expected of type
         int * int -> 'a
